--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- Updated Header to contain links to sections within li. Renamed div class nav to nav -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav class="nav">
@@ -25,6 +26,7 @@
         </nav>
     </header>
     <div class="hero"></div>
+    <!-- Added Class of "services blurb" and added alt text to all images. Also renamed divs to section -->
     <div class="services">
         <section id="search-engine-optimization" class="services-blurb">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left services-img"
@@ -61,6 +63,7 @@
             </p>
         </section>
     </div>
+    <!-- Renamed divs to asides. Added custom class to clean up CSS. Added alt attributes -->
     <aside class="benefit-blurb">
         <div class="right-blurb">
             <h3>Lead Generation</h3>
@@ -87,6 +90,7 @@
             </p>
         </div>
     </aside>
+    <!-- Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
