--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <section class="hero"></section>
     <!-- Added Class of "services blurb" and added alt text to all images. Also renamed divs to section -->
-    <div class="services">
-        <section id="search-engine-optimization" class="services-blurb">
+    <section class="services">
+        <article id="search-engine-optimization" class="services-blurb">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left services-img"
                 alt="a notebook with the words SEO written on it" />
             <h2>Search Engine Optimization</h2>
@@ -38,8 +38,8 @@
                 home. Search Engine Optimization (SEO) allows you to increase your
                 visibility and find the right customers for your business.
             </p>
-        </section>
-        <section id="online-reputation-management" class="services-blurb">
+        </article>
+        <article id="online-reputation-management" class="services-blurb">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right  services-img"
                 alt="computer with the words reputation on the screen" />
             <h2>Online Reputation Management</h2>
@@ -50,8 +50,8 @@
                 control over what potential customers see when they search for your
                 business.
             </p>
-        </section>
-        <section id="social-media-marketing" class="services-blurb">
+        </article>
+        <article id="social-media-marketing" class="services-blurb">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left  services-img"
                 alt="social media marketing" />
             <h2>Social Media Marketing</h2>
@@ -61,34 +61,34 @@
                 to your brand, using analytics to find the right markets and increase
                 your lead generation.
             </p>
-        </section>
-    </div>
+        </article>
+    </section>
     <!-- Renamed divs to asides. Added custom class to clean up CSS. Added alt attributes -->
     <aside class="benefit-blurb">
-        <div class="right-blurb">
+        <article class="right-blurb">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your
                 business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="right-blurb">
+        </article>
+        <article class="right-blurb">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing
                 the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="right-blurb">
+        </article>
+        <article class="right-blurb">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost management " />
             <p>
                 As the search ranking for your business increases, your advertising
                 costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </article>
     </aside>
     <!-- Footer -->
     <footer>
